gccida/g0/recog_2
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2071:40: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x2) ) 
     ~~~~~~~~~~~~~~~~~~~~              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2073:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2074:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2080:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1f = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2090:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x3o) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2092:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3o; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2093:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3p = ( rtx)x2h[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2099:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2i = ( rtx)x1f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2103:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x3r) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2105:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3r; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2106:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3s = ( rtx)x2i[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2131:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x3i) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2133:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3i; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2134:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3j = ( rtx)x2f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2140:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2g = ( rtx)x1f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2144:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x3l) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2146:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3l; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2147:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3m = ( rtx)x2g[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/insn-recog.c:2163:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_2/src/obj/insn-recog.o] Error 1
